--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "fals": "^1.0.0",
     "solid-app-router": "^0.3.3",
     "solid-js": "^1.4.2"
   }
